--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Google Maps Clustering Sample</string>
+    <string name="google_maps_key">AIzaSyCICKa_89an5LWGrO1KhDYx0SXynLHvQw8</string>
 </resources>
